# SJTU-RM-CV-2019

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  monitor.sh
armor/include/armor_finder/: armor_finder.h
armor/include/armor_finder/classifier/: classifier.h
armor/include/show_images/: show_images.h
armor/src/armor_finder/: armor_finder.cpp
armor/src/armor_finder/anti_top/: anti_top.cpp
armor/src/armor_finder/armor_box/: armor_box.cpp  find_light_blobs.cpp
armor/src/armor_finder/classifier/: classifier.cpp
armor/src/armor_finder/find/: find_armor_box.cpp  find_light_blobs.cpp
armor/src/armor_finder/searching_state/: find_armor_boxes.cpp  find_light_blobs.cpp  image_process.h  searching_state.cpp
armor/src/armor_finder/send_target/: send_target.cpp
armor/src/armor_finder/standby_state/: standby_state.cpp
armor/src/armor_finder/state_machine/searching_state/: searching_state.cpp
armor/src/armor_finder/state_machine/searching_state/image_process/: image_process.cpp  image_process.h
armor/src/armor_finder/state_machine/tracking_state/: tracking_state.cpp
armor/src/armor_finder/tracking_state/: tracking_state.cpp
armor/src/show_images/: show_images.cpp
energy/include/energy/: constant.h  energy.h  param_struct_define.h
energy/src/energy/: energy.cpp  energy_init.cpp  param_init.cpp  run.cpp
energy/src/energy/calculate/: circle_calculate.cpp  cycle_calculate.cpp
energy/src/energy/calibrate/: hsv_filter.cpp  split.cpp  structing.cpp
energy/src/energy/change/: mode_change.cpp  multiple_mode.cpp  target_change.cpp
energy/src/energy/clear/: clear.cpp  energy_init.cpp
energy/src/energy/find/: cycle_finder.cpp  energy_finder.cpp  target_finder.cpp
energy/src/energy/get/: aim_point_get.cpp  get_aim_point.cpp  get_center.cpp  get_guess_point.cpp  get_polar_angle.cpp  gimble_rotation_get.cpp  guess_point_get.cpp  hit_point_get.cpp  origin_get.cpp  polar_angle_get.cpp  position_get.cpp  predict_point_get.cpp
energy/src/energy/init/: clear.cpp  energy_init.cpp
energy/src/energy/judge/: judge_contour.cpp  judge_mode.cpp  judge_shoot.cpp  judge_time.cpp
energy/src/energy/mark/: mark.cpp
energy/src/energy/send/: send.cpp
energy/src/energy/send_target_by_uart/: send_target_by_uart.cpp
energy/src/energy/show/: show.cpp
energy/src/energy/tool/: tool.cpp
include/: log.h
include/camera/: camera_api.h  camera_define.h  camera_wrapper.h  video_wrapper.h
include/options/: additions.h
include/uart/: uart.h
others/: MV-UB31-Group0.config  MVCAMSDK_X64.lib  armor.Config  energy.Config  libmvsdk.dylib
others/include/: additions.h  constants.h  log.h  options.h  serial.h  systime.h
others/include/additions/: additions.h
others/include/camera/: CameraApi.h  CameraApiLoad.h  CameraDefine.H  CameraGrabber.h  CameraImage.h  CameraStatus.h  camera_define.h  camera_status.h  camera_wrapper.h  video_wrapper.h  wrapper_head.h
others/include/config/: setconfig.h
others/include/options/: additions.h  options.h
others/include/serial/: serial.h
others/include/uart/: uart.h
others/src/: additions.cpp  options.cpp  serial.cpp  systime.cpp
others/src/additions/: additions.cpp
others/src/camera/: camera_wrapper.cpp  video_wrapper.cpp
others/src/options/: additions.cpp  options.cpp
others/src/serial/: serial.cpp
others/src/uart/: uart.cpp
src/camera/: camera_wrapper.cpp  video_wrapper.cpp
src/uart/: uart.cpp
tools/: analysis.py  auto-pull.sh  bind-monitor.sh  create-startup.sh  monitor.bat  monitor.sh
tools/TrainCNN/: backward.py  cv_grab.py  forward.py  generate.py  grab.py  mvsdk.py
tools/para/: conv1_b  conv1_w  conv2_b  conv2_w  conv3_b  conv3_w  fc1_b  fc1_w  fc2_b  fc2_w
